[package]
name = "benches"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = { version = "0.3", features = ["async_tokio", "html_reports"] }
identity = { path = "../identity", features = ["account"] }
lazy_static = "1.4.0"
tokio = { version = "1.10", features = ["full"] }

[[bench]]
name = "autosave"
path = "autosave.rs"
harness = false